temporary fix issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,37 @@
           <a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
       </nav>
       <div class="container-fluid d-flex justify-content-center">
-          <div class="col-12 col-md-6">
+          <div class="col-12 col-md-3">
+              <!-- timer here -->
+              <div class="card-group">
+                  <div class="card">
+                      <div class="card-header">
+                          <div class="input-group">
+                            <select class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
+                                <option selected disabled>Hour</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                                <option value="4">One</option>
+                                <option value="5">Two</option>
+                                <option value="6">Three</option>
+                                <option value="7">One</option>
+                                <option value="8">Two</option>
+                                <option value="9">Three</option>
+                                <option value="10">One</option>
+                                <option value="11">Two</option>
+                                <option value="12">Three</option>
+                              </select>
+                          </div>
+                      </div>
+                      <div class="card-body">
+                          <h4 class="card-title">Title</h4>
+                          <p class="card-text">Text</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 col-md-3">
               <!-- group here -->
               <div class="card-group">
                   <div class="card">
