--- a/templates/index.html
+++ b/templates/index.html
@@ -51,15 +51,14 @@
               <div class="card-group">
                   <div class="card">
                       <div class="card-header">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <a name="addGroup-btn" id="addGroup-btn" class="btn btn-primary" href="/insertGroups" role="button">Add Group</a>
-                              </div>
-                              <div class="custom-file">
-                                  <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-                                  <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                              </div>
-                        </div>
+                          <form action="/uploadGroupFile" method="post" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label for="groupfile">Choose file to add group:</label>
+                                <input type="file" class="form-control-file" name="groupfile" id="groupfile" placeholder="Browse" aria-describedby="fileHelpId" accept=".xls, .xlsx, .csv">
+                                <small id="fileHelpId" class="form-text text-muted"></small>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Add Group</button>
+                        </form>
                       </div>
                       <div class="card-body">
                           <table class="table table-sm table-striped table-bordered">
@@ -92,15 +91,14 @@
               <div class="card-group">
                   <div class="card">
                       <div class="card-header">
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <a name="addDialog-btn" id="addDialog-btn" class="btn btn-primary" href="/insertDialogue" role="button">Add lines</a>
+                        <form action="/uploadLinesFile" method="post" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label for="linesfile">Choose file to add lines:</label>
+                                <input type="file" class="form-control-file" name="linesfile" id="linesfile" placeholder="Browse" aria-describedby="fileHelpId" accept=".xls, .xlsx, .csv">
+                                <small id="fileHelpId" class="form-text text-muted"></small>
                             </div>
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
-                                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                            </div>
-                        </div>
+                            <button type="submit" class="btn btn-primary">Add lines</button>
+                        </form>
                       </div>
                       <div class="card-body">
                           <table class="table table-striped table-bordered table-sm">
