--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <nav class="navbar navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a href="/index" class="navbar-brand"><img src="#" alt="" width="25" height="25" class="d-inline-block">WEB NAME</a>
-          <a href="/logout"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
+          <ul class="navbar-nav mr-auto">
+            {% if session['isAdmin'] == 1 %}
+              <li class="nav-item">
+                  <a href="/register" class="nav-link"><i class="fa fa-user-plus" aria-hidden="true"></i>New account</a>
+                </li>
+            {% endif %}
+              <li class="nav-item">
+                  <a href="/logout" class="nav-link"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
+                </li>
+          </ul>
       </nav>
       <div class="container-fluid d-flex justify-content-center">
           <div class="col-12 col-md-3">
@@ -22,26 +31,26 @@
                   <div class="card">
                       <div class="card-header">
                           <div class="input-group">
+                            <label for="inputGroupSelect04">Start send messages after each:</label>
                             <select class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
                                 <option selected disabled>Hour</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
-                                <option value="4">One</option>
-                                <option value="5">Two</option>
-                                <option value="6">Three</option>
-                                <option value="7">One</option>
-                                <option value="8">Two</option>
-                                <option value="9">Three</option>
-                                <option value="10">One</option>
-                                <option value="11">Two</option>
-                                <option value="12">Three</option>
-                              </select>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                                <option value="6">6</option>
+                                <option value="7">7</option>
+                                <option value="8">8</option>
+                                <option value="9">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                            </select>                       
                           </div>
                       </div>
                       <div class="card-body">
-                          <h4 class="card-title">Title</h4>
-                          <p class="card-text">Text</p>
+                        <a name="schedule-btn" id="schedule-btn" class="btn btn-success" href="/schedule-tasks" role="button">Schedule</a>
                       </div>
                   </div>
               </div>
@@ -127,12 +136,7 @@
 
 
 
-
-
-
-
-
-      
+ 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
