--- a/templates/index.html
+++ b/templates/index.html
@@ -26,33 +26,69 @@
       </nav>
       <div class="container-fluid d-flex justify-content-center">
           <div class="col-12 col-md-3">
-              <!-- timer here -->
               <div class="card-group">
                   <div class="card">
-                      <div class="card-header">
-                          <div class="input-group">
-                            <label for="inputGroupSelect04">Start send messages after each:</label>
-                            <select class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-                                <option selected disabled>Hour</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                                <option value="11">11</option>
-                                <option value="12">12</option>
-                            </select>                       
-                          </div>
-                      </div>
-                      <div class="card-body">
-                        <a name="schedule-btn" id="schedule-btn" class="btn btn-success" href="/schedule-tasks" role="button">Schedule</a>
-                      </div>
+                    {% if session['isAdmin'] == 1 %}                 
+                        <div class="card-header">
+                            <form action="/insertUsers" method="post" enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <label for="groupfile">Choose file to add users:</label>
+                                    <input type="file" class="form-control-file" name="groupfile" id="groupfile" placeholder="Browse" aria-describedby="fileHelpId" accept=".xls, .xlsx, .csv">
+                                    <small id="fileHelpId" class="form-text text-muted"></small>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Add Users</button>
+                            </form>
+                        </div>
+                        <div class="card-body">
+                            <div class="input-group">
+                                <label for="inputGroupSelect04">Start send messages after each:</label>
+                                <select class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
+                                    <option selected disabled>Hour</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                </select>                       
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a name="schedule-btn" id="schedule-btn" class="btn btn-success" href="/schedule-tasks" role="button">Schedule</a>
+                        </div>
+                    {% else %}                
+                        <div class="card-header">
+                            <div class="input-group">
+                                <label for="inputGroupSelect04">Start send messages after each:</label>
+                                <select class="custom-select" id="inputGroupSelect04" aria-label="Example select with button addon">
+                                    <option selected disabled>Hour</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <a name="schedule-btn" id="schedule-btn" class="btn btn-success" href="/schedule-tasks" role="button">Schedule</a>
+                        </div>
+                    {% endif %}
                   </div>
+                    
               </div>
           </div>
           <div class="col-12 col-md-3">
