add set admin function, change register, login layout

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,12 +12,7 @@
   </head>
   <body>
     <div class="row justify-content-center align-items-center">
-        <div class="card">
-          <div class="card-header">
-            <p class="text-center">Sign in with your socials:</p>
-            <a name="fb_btn" id="fb_btn" class="btn btn-primary" href="https://fb.com" role="button"><i class="fa fa-facebook" aria-hidden="true"></i> Sign in with Facebook</a>
-            <a name="google_btn" id="google_btn" class="btn btn-danger" href="https://google.com" role="button"><i class="fa fa-google-plus" aria-hidden="true"></i> Sign in with Google+</a>
-          </div>
+        <div class="card w-50">
           <div class="card-body">
             <form name="loginForm" method="POST">
               <div class="form-group">
