--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,10 @@
           <ul class="navbar-nav mr-auto">
             {% if session['isAdmin'] == 1 %}
               <li class="nav-item">
-                  <a href="/register" class="nav-link"><i class="fa fa-user-plus" aria-hidden="true"></i>New account</a>
+                  <a href="/register" class="nav-link"><i class="fa fa-user-plus" aria-hidden="true"></i> New account</a>
+                </li>
+              <li class="nav-item">
+                  <a href="/renderSetAdmin" class="nav-link"><i class="fa fa-cog" aria-hidden="true"></i> Set ADMIN</a>
                 </li>
             {% endif %}
               <li class="nav-item">
