--- a/templates/index.html
+++ b/templates/index.html
@@ -45,24 +45,10 @@
                         <div class="card-body">
                             <form action="/schedule-tasks" method="post">
                                 <div class="form-group">
-                                  <label for="hourSelect">Start send messages after each:</label>
-                                  <select class="form-control" name="hourSelect" id="hourSelect">
-                                    <option selected disabled>Hour</option>
-                                    <option value="0.1">0.1</option>
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
-                                    <option value="6">6</option>
-                                    <option value="7">7</option>
-                                    <option value="8">8</option>
-                                    <option value="9">9</option>
-                                    <option value="10">10</option>
-                                    <option value="11">11</option>
-                                    <option value="12">12</option>
-                                  </select>
-                                </div>
+                                  <label for="hourSelect">Enter time to schedule for sending message:</label>
+                                  <input type="datetime" class="form-control" name="hourSelect" id="hourSelect" aria-describedby="helpId" placeholder="HH:MM">
+                                  <small id="helpId" class="form-text text-muted"></small>
+                                </div>                                
                                 <button type="submit" class="btn btn-success">Schedule</button>
                             </form>
                         </div>
@@ -184,7 +170,7 @@
  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
