--- a/templates/login.html
+++ b/templates/login.html
@@ -12,25 +12,21 @@
   </head>
   <body>
     <div class="row justify-content-center align-items-center">
-        <div class="card w-50">
-          <div class="card-body">
-            <form name="loginForm" method="POST">
-              <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username" class="form-control" placeholder="Enter your username" aria-describedby="username_Error">
-                <small id="username_Error" class="text-danger d-none">{{username_Error}}</small>
-              </div>
-              <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" class="form-control" placeholder="Enter your password" aria-describedby="password_Error">
-                <small id="password_Error" class="text-danger d-none">{{password_Error}}</small>
-              </div>
-              <button type="submit" class="btn btn-success w-100"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in</button>
-              <p class="text-danger d-none" id="msg">{{msg}}</p>
-          </form>
-          </div>
+      <form name="loginForm" method="POST" class="border border-light shadow-lg w-50 p-3">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" class="form-control" placeholder="Enter your username" aria-describedby="username_Error">
+          <small id="username_Error" class="text-danger d-none">{{username_Error}}</small>
         </div>
-      </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" name="password" id="password" class="form-control" placeholder="Enter your password" aria-describedby="password_Error">
+          <small id="password_Error" class="text-danger d-none">{{password_Error}}</small>
+        </div>
+        <button type="submit" class="btn btn-success w-100"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in</button>
+        <p class="text-danger d-none" id="msg">{{msg}}</p>
+      </form>
+    </div>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
