--- a/templates/register.html
+++ b/templates/register.html
@@ -28,34 +28,30 @@
       </ul>
     </nav>
     <div class="row justify-content-center align-items-center">
-        <div class="card w-50">
-          <div class="card-body">
-            <form name="regForm" method="POST">
-              <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username" class="form-control" placeholder="Enter your username" aria-describedby="username_Error">
-                <small id="username_Error" class="text-danger">{{username_Error}}</small>
-              </div>
-              <div class="form-group">
-                <label for="fname">Full name:</label>
-                <input type="text" name="fname" id="fname" class="form-control" placeholder="Enter your full name" aria-describedby="fname_Error">
-                <small id="fname_Error" class="text-danger">{{fname_Error}}</small>
-              </div>
-              <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" class="form-control" placeholder="Enter your password" aria-describedby="password_Error">
-                <small id="password_Error" class="text-danger">{{password_Error}}</small>
-              </div>
-              <div class="form-group">
-                <label for="phone">Phone:</label>
-                <input type="text" name="phone" id="phone" class="form-control" placeholder="Enter your phone number" aria-describedby="phone_Error">
-                <small id="phone_Error" class="text-danger">{{phone_Error}}</small>
-              </div>
-              <button type="submit" class="btn btn-success w-100"><i class="fa fa-user-plus" aria-hidden="true"></i> Create new account</button>
-              <p class="text-danger text-center" id="regError">{{regError}}</p>
-          </form>
-          </div>
+      <form name="regForm" method="POST" action="/register" class="border border-light shadow-lg w-50 p-3">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" class="form-control" placeholder="Enter your username" aria-describedby="username_Error">
+          <small id="username_Error" class="text-danger"></small>
         </div>
+        <div class="form-group">
+          <label for="fname">Full name:</label>
+          <input type="text" name="fname" id="fname" class="form-control" placeholder="Enter your full name" aria-describedby="fname_Error">
+          <small id="fname_Error" class="text-danger"></small>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" name="password" id="password" class="form-control" placeholder="Enter your password" aria-describedby="password_Error">
+          <small id="password_Error" class="text-danger"></small>
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone:</label>
+          <input type="text" name="phone" id="phone" class="form-control" placeholder="Enter your phone number" aria-describedby="phone_Error">
+          <small id="phone_Error" class="text-danger"></small>
+        </div>
+        <button type="submit" class="btn btn-success w-100" id="registerBtn"><i class="fa fa-user-plus" aria-hidden="true"></i> Create new account</button>
+        <p class="text-danger text-center" id="regError"></p>
+      </form>
     </div>
       
     <!-- Optional JavaScript -->
@@ -63,5 +59,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/register.js') }}"></script>
   </body>
 </html>
